--- a/font-end/src/components/CourseList/CourseList.css
+++ b/font-end/src/components/CourseList/CourseList.css
@@ -40,6 +40,9 @@
     grid-template-columns: repeat(3, minmax(0,1fr));
     display: grid;
 }
+.course-list .course-item:hover {
+    transform: scale(1.15);
+} 
 .course-list .course-item {
     align-items: center;
     display: flex;
