--- a/font-end/src/components/LectureList/LectureList.css
+++ b/font-end/src/components/LectureList/LectureList.css
@@ -1,8 +1,12 @@
 .lecture-list {
-    border-left: 0.375rem solid #3a10e5;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .lecture-box {
     display: flex;
+    border-left: 0.375rem solid #3a10e5;
+    background-color: #fcfcfc;
 }
 .lecture-index{
     font-size: 3rem;
@@ -19,10 +23,59 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: 1.5625rem;
+    margin-right: 2rem;
     padding: 2rem 0;
 }
 .lecture-overview h2 {
     color: rgb(96, 79, 205, 1);
     margin-bottom: 8px;
+}
+.lecture-overview p {
+    font-size: 17px;
+}
+.lecture-view {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-left: auto;
+}
+.view-button {
+    cursor: pointer;
+    white-space: nowrap;
+    justify-content: center;
+    align-items: center;
+    display: inline-flex;
+    position: relative;
+    font-weight: 700;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    font-size: 1rem;
+    height: 40px;
+    border: 2px solid #3A10E5;
+    color: #3A10E5;
+    margin-right: 0.5rem;
+    background-color: #fff;
+}
+.lesson-list-show {
+    grid-template-columns: repeat(4, minmax(0,1fr));
+    display: grid;
+    padding: 16px 16px;
+    margin-left: 0.375rem;
+}
+.lesson-list-hidden {
+    display: none;
+}
+.lesson-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 8px;
+}
+.lesson-box p {
+    font-size: 18px;
+    line-height: 48px;
+    color: rgb(96, 79, 205, 1);
+    font-weight: 300;
 }
