--- a/font-end/src/components/Navigation/Navigation.css
+++ b/font-end/src/components/Navigation/Navigation.css
@@ -36,14 +36,12 @@
 .nav-auth .sign-up {
     margin-right: 15px;
     background-color: rgb(96, 79, 205, 1);
-    border-color: rgb(19, 11, 67, 1);
-    border-width: 1px;
+    border: 1px solid rgb(19, 11, 67, 1);
     color: rgb(255, 255, 255, 1);
 }
 
 .nav-auth .log-in {
     background-color: rgb(250, 250, 255, 1);
-    border-color: rgb(96, 79, 205, 1);
-    border-width: 1px;
+    border: 1px solid rgb(96, 79, 205, 1);
     color: rgb(96, 79, 205, 1);
 }
