--- a/font-end/src/components/Navigation/Navigation.css
+++ b/font-end/src/components/Navigation/Navigation.css
@@ -45,3 +45,15 @@
     border: 1px solid rgb(96, 79, 205, 1);
     color: rgb(96, 79, 205, 1);
 }
+
+.user-avatar {
+    background-image: url(https://avatars.githubusercontent.com/u/78080278?v=4);
+    box-shadow: 0 4px 16px 0 rgb(79 114 205 / 30%);
+    height: 42px;
+    margin-right: 16px;
+    width: 42px;
+    background-position: 50%;
+    background-size: cover;
+    border-radius: 100%;
+    flex-shrink: 0;
+}
