profile and responsive

--- a/font-end/src/components/CourseList/CourseList.css
+++ b/font-end/src/components/CourseList/CourseList.css
@@ -8,7 +8,6 @@
     left: 96px;
 }
 .list-container {
-    position: relative;
     display: flex;
     flex-direction: column;
     padding-top: 50px;
@@ -69,4 +68,12 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+@media screen and (max-width: 1000px) {
+    .list-container::after {
+        display: none;
+    }
+    .list-container::before {
+        display: none;
+    }
 }
