--- a/font-end/src/components/Lesson/Lesson.css
+++ b/font-end/src/components/Lesson/Lesson.css
@@ -1,7 +1,25 @@
 .lesson {
+    width: 100%;
     display: flex;
-    justify-content: center;
-    width: 90%;
+    flex-wrap: wrap;
+    flex-grow: 0;
+    max-width: 100%;
+    flex-basis: 100%;
     padding: 1rem 1rem;
-    margin: 0 1rem;
+    align-items: center;
+    justify-content: center;
+}
+.lesson-content {
+    flex-grow: 0;
+    max-width: 83.333333%;
+    flex-basis: 83.333333%;
+}
+.markdown-body {
+    margin-bottom: 2rem !important;
+}
+.video-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
