--- a/font-end/src/pages/Profile/Profile.css
+++ b/font-end/src/pages/Profile/Profile.css
@@ -1,5 +1,4 @@
 .user-avatar-profile {
-    background-image: url(https://avatars.githubusercontent.com/u/78080278?v=4);
     box-shadow: 0 4px 16px 0 rgb(79 114 205 / 30%);
     height: 200px;
     margin-right: 30px;
@@ -14,91 +13,105 @@
 .user-profile {
     display: flex;
     padding: 40px 32px 56px 32px;
-    background: linear-gradient(180deg,rgba(251,251,255,0) 79.36%,#f4f4fd),linear-gradient(180deg,#fafaff,rgba(250,250,255,.678) 24.48%,rgba(250,250,255,0) 77.6%,#fafaff),url(https://d24y9kuxp2d7l2.cloudfront.net/assets/bg-tracks-header@2x-8439ef30af6bf120107f6a84db31a62237d5ee8b.jpg),#fafaff;
-    background-position: -190px;
-    background-size: 100%;
+    --tw-shadow: 0px 10px 20px 0px rgba(79,114,205,.15);
+    --tw-ring-offset-shadow: 0 0 #0000;
+    background-color: #fff;
+    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-shadow);
+    padding-top: 24px;
 }
-
-.user-info-profile {
-    margin-top: 90px;
+.user-info {
+    margin-top: 1rem;
     color: #271A71;
 }
-
-.user-course-label {
-    display: block;
-    margin-top: 40px;
-    color: #271A71;
-    border-bottom: 1px solid #271B70;
-    margin-left: 150px;
-    margin-right: 1400px;
-    border-width: 3px;
+.user-info .username {
+    align-items: center;
+    display: flex;
+    margin-bottom: 0.75rem;
 }
-
-.btn {
-    display: block;
-    position: absolute;
-    padding-bottom: 2px;
+.user-info .name {
+    color: #5c5589;
     font-size: 20px;
-    font-family: Poppins,sans-serif;
-    background: #ffff;
+    font-weight: 600;
+    line-height: 140%;
+    margin-bottom: 1rem;
+}
+.user-details {
+    align-items: center;
+    display: flex;
+    margin-bottom: 12px;
+}
+.user-details .location {
+    align-items: center;
+    color: #130b43;
+    display: flex;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 150%;
+    margin-right: 28px;
+}
+.user-details .joined {
+    align-items: center;
+    color: #130b43;
+    display: flex;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 150%;
+    margin-right: 28px;
+}
+.user-details img {
+    height: 16px;
+    margin-right: 12px;
+    width: 16px;
+}
+.user-about {
+    padding: 2.5rem 2.5rem;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.user-label {
+    margin-bottom: 1rem;
     color: #271A71;
-    margin-bottom: 2rem;
-    margin-left: 150px;
-    margin-top: 20px;
-    border: none;
-    outline: none;
-    font-weight: bold;
-    cursor: pointer;
 }
-
-.btn::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 0.175rem;
-    left: 0;
-    bottom: 0;
-    background: #271B70; 
+.user-label hr {
+    border-bottom: 3px solid #271B70;
+    width: 5%;
 }
-
-.btn::after {
-    transform: scale(0, 1);
-    transform-origin: 0% 100%;
-    transition: transform 0.3s ease;
+.user-bio {
+    margin-bottom: 3rem;
 }
-
-.btn:hover::after {
-    transform: scale(1, 1);
+.user-bio hr {
+    width: 2% !important;
 }
-
-.courses-Profile {
+.user-bio blockquote {
+    font-size: 18px;
+    width: 80%;
+}
+.enroll-list {
     grid-template-columns: repeat(3, 200px);
     display: grid;
 }
-
-.courses-Profile .courseEnroll-item {
+.enroll-list .enroll-item {
     align-items: center;
     display: flex;
     flex-direction: column;
     padding: 24px 8px;
-    margin: 55px auto auto 150px;
     transition: transform .2s ease-out;
     text-decoration: none;
     color: #130b43;
+    margin-right: auto;
 }
-
-.courseEnroll-item img {
+.enroll-item img {
     filter: drop-shadow(0 5px 2px rgba(0, 0, 0,.2));
     flex-shrink: 0;
     height: 80px;
     margin-bottom: 12px;
     width: 80px;
 }
-
-.courseEnroll-item .title {
+.enroll-title {
     font-family: Source Code Pro,monospace;
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 16px;
+    font-weight: 500;
     line-height: 140%;
     margin-bottom: 4px;
     overflow: hidden;
