add change profile page

--- a/font-end/src/components/CourseList/CourseList.css
+++ b/font-end/src/components/CourseList/CourseList.css
@@ -35,7 +35,7 @@
 }
 .course-list {
     margin-top: 64px;
-    grid-template-columns: repeat(3, minmax(0,1fr));
+    grid-template-columns: repeat(4, minmax(0,1fr));
     display: grid;
 }
 .course-list .course-item:hover {
@@ -75,5 +75,13 @@
     }
     .list-container::before {
         display: none;
+    }
+    .course-list {
+        grid-template-columns: repeat(3,minmax(0,1fr));
+    }
+}
+@media screen and (max-width: 768px) {
+    .course-list {
+        grid-template-columns: repeat(2,minmax(0,1fr));
     }
 }
