--- a/font-end/src/components/Enrollment/Enroll.css
+++ b/font-end/src/components/Enrollment/Enroll.css
@@ -90,11 +90,27 @@
     width: 20px;
     margin-right: 12px;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
     .icon-graphics::after {
         display: none;
     }
     .icon-graphics::before {
         display: none;
+    }
+}
+@media screen and (max-width: 768px) {
+    .icon-graphics img {
+        display: none;
+    }
+    .enroll-intro {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+    }
+    .enroll-intro h1 {
+        font-size: 32px;
+    }
+    .enroll-intro p {
+        font-size: 18px;
     }
 }
