--- a/font-end/src/pages/Home/Home.css
+++ b/font-end/src/pages/Home/Home.css
@@ -1,15 +1,15 @@
 .home-header-container {
     display: flex;
-    width: 80%;
+    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
+    padding: 0 32px;
 }
 .home-header {
     padding: 40px 32px 56px 32px;
     background: linear-gradient(180deg,rgba(251,251,255,0) 79.36%,#f4f4fd),linear-gradient(180deg,#fafaff,rgba(250,250,255,.678) 24.48%,rgba(250,250,255,0) 77.6%,#fafaff),url(https://d24y9kuxp2d7l2.cloudfront.net/assets/bg-tracks-header@2x-8439ef30af6bf120107f6a84db31a62237d5ee8b.jpg),#fafaff;
     background-position: -190px;
     background-size: 100%;
-    display: none;
 }
 .home-header-intro {
     width: 680px;
@@ -32,18 +32,19 @@
     height: 270px;
     width: 336px;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 768px) {
     .intro-image img {
         display: none;
     }
     .home-header-intro h1 {
-        text-align: center;
+        font-size: 32px;
     }
     .home-header-intro p {
-        text-align: center;
+        font-size: 18px;
     }
     .home-header-container {
         align-items: center;
+        width: 100%;
     }
     .home-header-intro {
         display: flex;
