--- a/font-end/src/components/Enrollment/Enroll.css
+++ b/font-end/src/components/Enrollment/Enroll.css
@@ -1,9 +1,14 @@
 .enroll-container {
-    display: flex;
-    padding: 40px 32px 56px 32px;
     background: linear-gradient(180deg,rgba(251,251,255,0) 79.36%,#f4f4fd),linear-gradient(180deg,#fafaff,rgba(250,250,255,.678) 24.48%,rgba(250,250,255,0) 77.6%,#fafaff),url(https://d24y9kuxp2d7l2.cloudfront.net/assets/bg-tracks-header@2x-8439ef30af6bf120107f6a84db31a62237d5ee8b.jpg),#fafaff;
     background-position: -190px;
     background-size: 100%;
+}
+.enroll-content {
+    display: flex;
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px 32px 56px 32px;
 }
 .enroll-intro {
     max-width: 680px;
@@ -84,11 +89,6 @@
 .enroll-button:hover {
     box-shadow: 0 4px 7px rgb(79 114 205 / 60%);
     cursor: pointer;
-}
-.enroll-button img {
-    height: 20px;
-    width: 20px;
-    margin-right: 12px;
 }
 @media screen and (max-width: 1100px) {
     .icon-graphics::after {
