--- a/font-end/src/components/LectureList/LectureList.css
+++ b/font-end/src/components/LectureList/LectureList.css
@@ -59,7 +59,7 @@
     background-color: #fff;
 }
 .lesson-list-show {
-    grid-template-columns: repeat(4, minmax(0,1fr));
+    grid-template-columns: repeat(1, minmax(0,1fr));
     display: grid;
     padding: 16px 16px;
     margin-left: 0.375rem;
@@ -70,8 +70,9 @@
 .lesson-box {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     padding: 8px 8px;
+    margin-left: 110px;
 }
 .lesson-box p {
     font-size: 18px;
@@ -94,4 +95,15 @@
     .view-button {
         display: none;
     }
+}
+
+.lecture-modify {
+    display: flex;
+    grid-column-gap: 50px;
+}
+
+.lesson-modify {
+    display: flex;
+    grid-column-gap: 30px;
+    margin-left: 50px;
 }
