--- a/font-end/src/index.css
+++ b/font-end/src/index.css
@@ -26,9 +26,6 @@ code {
 a {
     text-decoration: none;
 }
-ul {
-    list-style: none;
-}
 .btn-primary {
     background-color: rgb(96 79 205);
     align-items: center;
@@ -57,6 +54,7 @@ ul {
     justify-content: center;
     transition: background-color .1s ease-in;
     white-space: nowrap;
+    height: 48px;
     background-color: rgb(250 250 255/var(--tw-bg-opacity));
     border: 1px solid rgb(96 79 205/var(--tw-border-opacity));
     color: rgb(96 79 205/var(--tw-text-opacity));
