--- a/font-end/src/pages/Course/Course.css
+++ b/font-end/src/pages/Course/Course.css
@@ -1,10 +1,11 @@
 .course-container .header {
-    display: flex;
-    padding: 16px 16px 16px;
-    align-items: center;
-    height: 100px;
     box-shadow: 0px 4px 10px 0px rgba(79,114,205,.15);
     position: relative;
+}
+.header-content {
+    display: flex;
+    padding: 20px 0px 20px;
+    align-items: center;
 }
 .course-container .header-text {
     display: flex;
@@ -45,7 +46,7 @@
     max-width: 750px;
     margin-bottom: 32px;
 }
-.hidden {
+.hidden-overflow {
     height: 150px;
     overflow: hidden;
     position: relative;
