--- a/font-end/src/components/Navigation/Navigation.css
+++ b/font-end/src/components/Navigation/Navigation.css
@@ -24,7 +24,9 @@
     text-transform: uppercase;
     font-weight: 600;
 }
-
+.nav-auth {
+    margin-left: auto;
+}
 .nav-auth a {
     font-size: 14px;
     text-decoration: none;
