--- a/font-end/src/pages/Learn/Learning.css
+++ b/font-end/src/pages/Learn/Learning.css
@@ -12,7 +12,7 @@
     flex-grow: 0;
     max-width: 25%;
     flex-basis: 25%;
-    height: 100%;
+    height: 200px;
     overflow-y: scroll;
     padding-left: 24px;
 }
@@ -69,6 +69,8 @@
     z-index: 2;
     position: sticky;
     background-color: #fff;
+    overflow-y: scroll;
+    height: 200px;
 }
 @media screen and (max-width: 1000px) {
     .learn-navigation {
