--- a/font-end/src/pages/Learn/Learning.css
+++ b/font-end/src/pages/Learn/Learning.css
@@ -12,7 +12,7 @@
     flex-grow: 0;
     max-width: 25%;
     flex-basis: 25%;
-    height: 200px;
+    height: 100%;
     overflow-y: scroll;
     padding-left: 24px;
 }
