--- a/font-end/src/components/LectureList/LectureList.css
+++ b/font-end/src/components/LectureList/LectureList.css
@@ -8,7 +8,7 @@
     border-left: 0.375rem solid #3a10e5;
     background-color: #fff;
 }
-.lecture-index{
+.lecture-index {
     font-size: 3rem;
     font-weight: 700;
     letter-spacing: .15rem;
@@ -18,6 +18,9 @@
     text-align: center;
     flex-shrink: 0;
     flex-grow: 0;
+}
+.lecture-item {
+    width: 100%;
 }
 .lecture-overview {
     display: flex;
