--- a/font-end/src/components/Modal/Course/CourseModal.css
+++ b/font-end/src/components/Modal/Course/CourseModal.css
@@ -11,19 +11,19 @@
     top: 0;
     z-index: 100;
     cursor: pointer;
-    will-change: opacity;
-}
-.modal-container {
     align-items: center;
-    bottom: 0;
     display: flex;
     justify-content: center;
-    left: 0;
-    position: fixed;
-    right: 0;
-    top: 0;
-    z-index: 100;
+    
+}
+.modal-container {
+    background-color: #fff;
+    box-shadow: 0 4px 12px rgb(0 0 0 / 15%);
+    cursor: default;
+    max-width: 100%;
+    position: relative;
     will-change: transform;
+    width: 720px;
 }
 .modal-content {
     --tw-shadow: 0px 4px 42px 0px rgba(79,114,205,.3);
@@ -34,7 +34,6 @@
     max-height: 90%;
     overflow-y: auto;
     padding: 32px 48px;
-    width: 30%
 }
 .modal-content h1 {
     margin-bottom: 12px;
