--- a/font-end/src/pages/Blog/Blog.css
+++ b/font-end/src/pages/Blog/Blog.css
@@ -128,6 +128,10 @@
     display: flex;
     margin-top: 16px;
     position: relative;
+    align-items: center;
+}
+.modify-comment {
+    margin-left: 16px;
 }
 .comment-body {
     background-color: rgb(242, 243, 245);
@@ -173,8 +177,56 @@
     font-size: 16px;
 }
 .v-modal-body {
-    max-height: 100vh;
+    height: 100vh;
     overflow-y: auto;
     padding: 0 40px 60px;
     position: relative;
+}
+.comment-dropdown {
+    position: absolute;
+    inset: 110% 0px 0px 0px;
+    transform: translate(20%, 0px);
+    z-index: 3;
+}
+.comment-dropdown ul {
+    --tw-shadow: 0px 4px 42px 0px rgba(79,114,205,.15);
+    background-color: #fff;
+    border-radius: 8px;
+    --tw-ring-shadow: 0 0 #0000;
+    box-shadow: var(--tw-ring-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
+    padding-bottom: 20px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 16px;
+    list-style: none;
+    max-width: 300px;
+}
+.modify-comment {
+    cursor: pointer;
+}
+.comment-dropdown ul li button {
+    width: 100%;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 8px;
+    background-color: #fff;
+    font-weight: 500;
+    color: rgb(28, 30, 33);
+    display: flex;
+    font-size: 16px;
+    line-height: 170%;
+    text-decoration: none;
+    cursor: pointer;
+}
+.comment-dropdown ul li button:hover {
+    background-color: rgb(250, 250, 250);
+}
+@media screen and (max-width: 768px) {
+    .blog-stats {
+        display: none;
+    }
+    .blog-content article {
+        width: 100%;
+    }
 }
